# star

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  bag_to_csv.py  bag_to_csv_3.py  calibrationFile.txt  depths_1669.txt  extrinsics.txt  fetcher.py  getData.py  helper.py  imgui.ini  main.cpp  main.py  notes.txt  objp.txt  plane_points_1669.txt  point_indices1669.txt  record  syncher.py  tester.py  utility.py
Calibration/: calibrate.py
Calibration/Final/: 1_2021-02-11_19:54.txt  3_2021-02-17_16:15.txt  4_2021-02-17_16:23.txt
Calibration/Missions/: missions.txt
Calibration/Missions/Mission_1/: fisheyeStereoCalibrate.py  transformation.py
Calibration/Missions/Mission_10/: classical_fill.py
Calibration/Missions/Mission_2/: photo_quality_control.py
Calibration/Missions/Mission_3/: extrinsic_parameters_usage.py
Documentations/: .~lock.OGAM STEREO VISION DATASET_PreReport.odt#  Internal_Transformations.txt  OGAM STEREO VISION DATASET_PreReport.odt  Record_flow.dia  kara_liste.txt  metadata_exp.txt  notes.txt  rotation_matrix.txt  todo.txt
Evaluators/: correlation.py  covariance.py  delay.py  rotationMatrix.py
Health_Check/: health_check.py
Packager/: package_list.txt  packager.py  packager_2.py
Processor/: bag_to_csv_3.py  extractor.py  fetcher.py  main.py  tester.py  updateTargetRecords.py  utility.py
Processor/DepthPlayground/: main.py
Processor/Evaluators/: delay.py  rotationMatrix.py
Processor/FisheyePlayground/: Line_fit_error.py  Pick_frames_from_extracted_data.py  Transformations_fisheye.py  calibrationFile.txt  main.py  saveImages.py
Recorder/Final/: CMakeCache.txt  CMakeLists.txt  Makefile  record  recorder.cpp  recorder_calibration.cpp  recorder_calibration.hpp  recorder_common.cpp  recorder_common.hpp  recorder_health_check.cpp  recorder_health_check.hpp  recorder_scene.cpp  recorder_scene.hpp  time_syncher.cpp  time_syncher.hpp
Recorder/application/: CMakeCache.txt  Makefile  main.cpp  main2.cpp  main4.cpp  record  snapshotSelector.py
Recorder/application/SnapshotRecorder/: CMakeCache.txt  CMakeLists.txt  Makefile  main3.cpp  main4.cpp  record
Records/: targetRecords.txt
Superpixel/: Superpixel.py  fill_depth.py  hoca.py  test_Superpixel.py
paints/calibration/: fileNamingConventionForShots.jpg~
workOn/: calib.txt
(+598 files in other folders)
